tenzir/bats/data/reference/functions/test_replace/step_05.ref
error: `max` must be at least 0, but got -100
 --> <input>:3:32
  |
3 |     x = x.replace(":", "", max=-100)
  |                                ^^^^ 
  |